# arxivmind

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  SECURITY.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  refresh.yml
agent/: llm.py  loop.py  tools.py
api/: auth.py  deps.py  main.py  middleware.py
api/routes/: health.py  papers.py  query.py
eval/: eval_scores.json  golden_set.json  ragas_eval.py
eval/adversarial/: test_attacks.py
frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/ingest/: route.ts
frontend/src/app/api/papers/: route.ts
frontend/src/app/api/query/: route.ts
frontend/src/app/api/refresh/: route.ts
frontend/src/app/api/search/: route.ts
frontend/src/app/api/summarise/: route.ts
frontend/src/lib/: api-client.ts
ingestion/: chunk.py  embed.py  fetch.py  parse.py
mcp_server/: server.py
retrieval/: rerank.py  search.py
scripts/: demo_queries.py  ingest.py  refresh_papers.py
tests/: test_api.py  test_mcp.py  test_retrieval.py
