[project]
name = "arxivmind"
version = "0.1.0"
description = "FastAPI RAG system over Arxiv ML papers with agentic pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=3.3.0",
    "pymupdf>=1.24.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "openai>=1.55.0",
    "arxiv>=2.1.3",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "ragas>=0.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "rich>=13.9.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "ingestion", "retrieval", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long
    "B008",   # Depends() in default args — standard FastAPI pattern
    "E402",   # module import not at top — needed for sys.path scripts
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
